# crud-with-python

./: README.md  pyproject.toml
app/: __init__.py
app/api/: user.py
app/configs/: __init__.py
app/databases/: __init__.py
app/models/: user.py
app/services/: user_service.py
app/utils/: model_utils.py
postman/: Crud-User-With-Python.postman_collection.json
scripts/: database.py
